// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppToasts /> renders UpgradeToastMessage when alertStore.info.upgradeReady=true 1`] = `
"
<li class=\\"nav-item components-navbar-button ml-auto\\">
  <div class=\\" tooltip-trigger\\">
    <span
      id=\\"components-notifications\\"
      class=\\"nav-link cursor-pointer\\"
    >
      <svg
        aria-hidden=\\"true\\"
        focusable=\\"false\\"
        data-prefix=\\"fas\\"
        data-icon=\\"circle-info\\"
        class=\\"svg-inline--fa fa-circle-info fa-fw \\"
        role=\\"img\\"
        xmlns=\\"http://www.w3.org/2000/svg\\"
        viewbox=\\"0 0 512 512\\"
      >
        <path
          fill=\\"currentColor\\"
          d=\\"M256 0C114.6 0 0 114.6 0 256s114.6 256 256 256s256-114.6 256-256S397.4 0 256 0zM256 128c17.67 0 32 14.33 32 32c0 17.67-14.33 32-32 32S224 177.7 224 160C224 142.3 238.3 128 256 128zM296 384h-80C202.8 384 192 373.3 192 360s10.75-24 24-24h16v-64H224c-13.25 0-24-10.75-24-24S210.8 224 224 224h32c13.25 0 24 10.75 24 24v88h16c13.25 0 24 10.75 24 24S309.3 384 296 384z\\"
        >
        </path>
      </svg>
    </span>
  </div>
</li>
<div class=\\"components-toast-container d-flex flex-column\\">
  <div class=\\"m-1 bg-toast text-white rounded shadow components-animation-fade-appear components-animation-fade-appear-active\\">
    <div class=\\"d-flex flex-row p-1\\">
      <div class=\\"flex-shrink-0 flex-grow-0 align-self-center fa-stack fa-2x\\">
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"circle\\"
          class=\\"svg-inline--fa fa-circle fa-stack-2x text-success\\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 512 512\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256z\\"
          >
          </path>
        </svg>
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"arrow-up\\"
          class=\\"svg-inline--fa fa-arrow-up fa-stack-1x text-white\\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 384 512\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M374.6 246.6C368.4 252.9 360.2 256 352 256s-16.38-3.125-22.62-9.375L224 141.3V448c0 17.69-14.33 31.1-31.1 31.1S160 465.7 160 448V141.3L54.63 246.6c-12.5 12.5-32.75 12.5-45.25 0s-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0l160 160C387.1 213.9 387.1 234.1 374.6 246.6z\\"
          >
          </path>
        </svg>
      </div>
      <div class=\\"flex-shrink-1 flex-grow-1 align-self-center ms-1 me-3 text-break text-wrap\\">
        <div>
          <div>
            New version available, updates are paused until this page auto reloads
          </div>
          <div>
            <code>
              unknown
            </code>
          </div>
          <div class=\\"d-flex flex-row-reverse\\">
            <button
              type=\\"button\\"
              class=\\"btn btn-sm btn-light\\"
            >
              <svg
                aria-hidden=\\"true\\"
                focusable=\\"false\\"
                data-prefix=\\"fas\\"
                data-icon=\\"stop\\"
                class=\\"svg-inline--fa fa-stop me-2\\"
                role=\\"img\\"
                xmlns=\\"http://www.w3.org/2000/svg\\"
                viewbox=\\"0 0 384 512\\"
              >
                <path
                  fill=\\"currentColor\\"
                  d=\\"M384 128v255.1c0 35.35-28.65 64-64 64H64c-35.35 0-64-28.65-64-64V128c0-35.35 28.65-64 64-64H320C355.3 64 384 92.65 384 128z\\"
                >
                </path>
              </svg>
              Stop auto-reload
            </button>
          </div>
          <div
            class=\\"mt-2 progress bg-dark\\"
            style=\\"height: 2px;\\"
          >
            <div
              class=\\"progress-bar bg-white toast-upgrade-progressbar\\"
              role=\\"progressbar\\"
              style=\\"width: 100px;\\"
            >
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`<AppToasts /> renders upstream error toasts for each unhealthy upstream 1`] = `
"
<li class=\\"nav-item components-navbar-button ml-auto\\">
  <div class=\\" tooltip-trigger\\">
    <span
      id=\\"components-notifications\\"
      class=\\"nav-link cursor-pointer\\"
    >
      <svg
        aria-hidden=\\"true\\"
        focusable=\\"false\\"
        data-prefix=\\"fas\\"
        data-icon=\\"circle-info\\"
        class=\\"svg-inline--fa fa-circle-info fa-fw \\"
        role=\\"img\\"
        xmlns=\\"http://www.w3.org/2000/svg\\"
        viewbox=\\"0 0 512 512\\"
      >
        <path
          fill=\\"currentColor\\"
          d=\\"M256 0C114.6 0 0 114.6 0 256s114.6 256 256 256s256-114.6 256-256S397.4 0 256 0zM256 128c17.67 0 32 14.33 32 32c0 17.67-14.33 32-32 32S224 177.7 224 160C224 142.3 238.3 128 256 128zM296 384h-80C202.8 384 192 373.3 192 360s10.75-24 24-24h16v-64H224c-13.25 0-24-10.75-24-24S210.8 224 224 224h32c13.25 0 24 10.75 24 24v88h16c13.25 0 24 10.75 24 24S309.3 384 296 384z\\"
        >
        </path>
      </svg>
    </span>
  </div>
</li>
<div class=\\"components-toast-container d-flex flex-column\\">
  <div class=\\"m-1 bg-toast text-white rounded shadow components-animation-fade-appear components-animation-fade-appear-active\\">
    <div class=\\"d-flex flex-row p-1\\">
      <div class=\\"flex-shrink-0 flex-grow-0 align-self-center fa-stack fa-2x\\">
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"circle\\"
          class=\\"svg-inline--fa fa-circle fa-stack-2x text-danger\\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 512 512\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256z\\"
          >
          </path>
        </svg>
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"exclamation\\"
          class=\\"svg-inline--fa fa-exclamation fa-stack-1x text-white\\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 128 512\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M64 352c17.69 0 32-14.32 32-31.1V64.01c0-17.67-14.31-32.01-32-32.01S32 46.34 32 64.01v255.1C32 337.7 46.31 352 64 352zM64 400c-22.09 0-40 17.91-40 40s17.91 39.1 40 39.1s40-17.9 40-39.1S86.09 400 64 400z\\"
          >
          </path>
        </svg>
      </div>
      <div class=\\"flex-shrink-1 flex-grow-1 align-self-center ms-1 me-3 text-break text-wrap\\">
        <div>
          <div>
            Alertmanager am1 raised an error
          </div>
          <div>
            <code>
              error 1
            </code>
          </div>
        </div>
      </div>
      <div class=\\"flex-shrink-0 flex-grow-0 align-self-top\\">
        <span class=\\"badge components-label cursor-pointer with-click with-click-dark\\">
          <svg
            aria-hidden=\\"true\\"
            focusable=\\"false\\"
            data-prefix=\\"fas\\"
            data-icon=\\"xmark\\"
            class=\\"svg-inline--fa fa-xmark \\"
            role=\\"img\\"
            xmlns=\\"http://www.w3.org/2000/svg\\"
            viewbox=\\"0 0 320 512\\"
          >
            <path
              fill=\\"currentColor\\"
              d=\\"M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z\\"
            >
            </path>
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div class=\\"m-1 bg-toast text-white rounded shadow components-animation-fade-appear components-animation-fade-appear-active\\">
    <div class=\\"d-flex flex-row p-1\\">
      <div class=\\"flex-shrink-0 flex-grow-0 align-self-center fa-stack fa-2x\\">
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"circle\\"
          class=\\"svg-inline--fa fa-circle fa-stack-2x text-danger\\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 512 512\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256z\\"
          >
          </path>
        </svg>
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"exclamation\\"
          class=\\"svg-inline--fa fa-exclamation fa-stack-1x text-white\\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 128 512\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M64 352c17.69 0 32-14.32 32-31.1V64.01c0-17.67-14.31-32.01-32-32.01S32 46.34 32 64.01v255.1C32 337.7 46.31 352 64 352zM64 400c-22.09 0-40 17.91-40 40s17.91 39.1 40 39.1s40-17.9 40-39.1S86.09 400 64 400z\\"
          >
          </path>
        </svg>
      </div>
      <div class=\\"flex-shrink-1 flex-grow-1 align-self-center ms-1 me-3 text-break text-wrap\\">
        <div>
          <div>
            Alertmanager am3 raised an error
          </div>
          <div>
            <code>
              error 2
            </code>
          </div>
        </div>
      </div>
      <div class=\\"flex-shrink-0 flex-grow-0 align-self-top\\">
        <span class=\\"badge components-label cursor-pointer with-click with-click-dark\\">
          <svg
            aria-hidden=\\"true\\"
            focusable=\\"false\\"
            data-prefix=\\"fas\\"
            data-icon=\\"xmark\\"
            class=\\"svg-inline--fa fa-xmark \\"
            role=\\"img\\"
            xmlns=\\"http://www.w3.org/2000/svg\\"
            viewbox=\\"0 0 320 512\\"
          >
            <path
              fill=\\"currentColor\\"
              d=\\"M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z\\"
            >
            </path>
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
"
`;
